Reserved spelt correctly and alignment of words

--- a/MyDnDWebsite/CSS/shared.css
+++ b/MyDnDWebsite/CSS/shared.css
@@ -240,6 +240,7 @@ CONTEXT STYLES
     color: #13161B;
     width: 50%;
     margin: 0 auto;
+    text-align: center;
 }   
 
 .reservation form{
